# swift-anycodable

./: CMakeLists.txt
Sources/: AnyCodable.swift
